--- a/views/index.pug
+++ b/views/index.pug
@@ -3,9 +3,15 @@ extends layout
 block content
   h1= title
   p Welcome to #{customer}
-
+ 
   ul
-  each val in customers
-    li= val.email
+  if customers.length
+  
+     
+     each val in customers
+      li= val.email + ' '+val.lastname
+  
+     else
+      li There are no values
   else
-    li There are no values
+     li=customers.email
