--- a/views/index.pug
+++ b/views/index.pug
@@ -2,16 +2,17 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{customer}
+  if customer
+    p Welcome to #{customer}
  
-  ul
-  if customers.length
+    ul
+    if customers.length
   
      
-     each val in customers
-      li= val.email + ' '+val.lastname
+       each val in customers
+        li= val.email + ' '+val.lastname
   
-     else
-      li There are no values
-  else
-     li=customers.email
+       else
+        li There are no values
+    else
+       li=customers.email
