--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,7 @@ block content
   
      
        each val in customers
-        li= val.email + ' '+val.lastname
+        li= val.id +' '+ val.email + ' '+val.lastname
   
        else
         li There are no values
